--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
-body{
-    
+.nav-link{
+    color: palevioletred;
+}
+
+#banner{
+    display: flex;
+    height: 300px;
+    background: palegoldenrod;
+    justify-content: center;
+    align-items: center;
 }
