--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,9 @@
     justify-content: center;
     align-items: center;
 }
+
+#servico .row div{
+    height: 200px;
+    background: palegreen;
+    color: black;
+}
